--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="title__description__of__person">Всё о человеке:</div>
           <div class="nav__description__of__person">
             <div class="nav__item"><span class="name">ФИО: </span><a href="https://vk.com/id379588402" target="_blank">Пивень Виктория Александровна</a></div>
-            <div class="nav__item"><span class="email">Почта: </span><a href="viktoriaaleksandrovna348971@gmail.com" target="_blank">viktoriaaleksandrovna348971 @gmail.com</a></div>
+            <div class="nav__item"><span class="email">Почта: </span><a href="https://mail.google.com/mail/u/0/#search/viktoriaaleksandrovna348971%40gmail.com" target="_blank">viktoriaaleksandrovna348971 @gmail.com</a></div>
             <div class="nav__item"><span class="telefone">Номер телефона: </span><a href="tel:+79517319410">+79517319410</a></div>
             <div class="nav__item"><span class="age">Возраст: </span>14 лет</div>
             <div class="nav__item"><span class="hobby">Хобби: </span>Кикбоксинг, срельба</div>
