--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="nav__item"><span class="email">Почта: </span><a href="viktoriaaleksandrovna348971@gmail.com" target="_blank">viktoriaaleksandrovna348971 @gmail.com</a></div>
             <div class="nav__item"><span class="telefone">Номер телефона: </span><a href="tel:+79517319410">+79517319410</a></div>
             <div class="nav__item"><span class="age">Возраст: </span>14 лет</div>
-            <div class="nav__item"><span class="hobby">Хобби: </span>Кикбоксинг, срельба</div>
+            <div class="nav__item"><span class="hobby">Хобби: </span>Кикбоксинг, стрельба</div>
           </div>
         </div>
     </div>
