--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
             <div class="nav__item"><span class="email">Почта: </span><a href="viktoriaaleksandrovna348971@gmail.com" target="_blank">viktoriaaleksandrovna348971 @gmail.com</a></div>
             <div class="nav__item"><span class="telefone">Номер телефона: </span><a href="tel:+79517319410">+79517319410</a></div>
             <div class="nav__item"><span class="age">Возраст: </span>14 лет</div>
-            <div class="nav__item"><span class="hobby">Хобби: </span>Кикбоксинг, стрельба</div>
+            <div class="nav__item"><span class="hobby">Хобби: </span>Кикбоксинг, срельба</div>
           </div>
         </div>
     </div>
